[package]
name = "slime_seed_finder"
version = "0.1.0"
authors = ["Kman15SB"]
edition = "2021"
[package.metadata]
# Disable wasm-opt because it not works with cargo wasi
# https://github.com/bytecodealliance/cargo-wasi/issues/49
wasm-opt = false

[lib]
name = "slime_seed_finder"

[profile.release]
lto = true

[dependencies]
indicatif = "0.16.2"

[[bin]]
name = "slime_seed_finder"
path = "src/main.rs"
